blue-green-app/deploy/k8s-manifests/api-server/k8s-go-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-deployment
  labels:
    app: go-server
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
        - name: http-go-server
          image: api-server:v0.1
          imagePullPolicy: Never
          ports:
            - name: http-port
              containerPort: 4000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /startupProbe
              port: http-port
            failureThreshold: 30
            periodSeconds: 10              
          livenessProbe:
            httpGet:
              path: /livenessProbe
              port: http-port
            failureThreshold: 2
            successThreshold: 1
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            initialDelaySeconds: 30          
          readinessProbe:
            httpGet:
              path: /readinessProbe
              port: http-port
            failureThreshold: 2
            successThreshold: 1
            initialDelaySeconds: 3
            periodSeconds: 11
            timeoutSeconds: 10
            initialDelaySeconds: 30                      
          resources:
            requests:
              cpu: 5m
              memory: 10Mi
            limits:      
              cpu: 100m
              memory: 100Mi
