blue-green-app/deploy/k8s-manifests/api-server/k8s-go-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
spec:
  selector:
    app: go-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: NodePort
